--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./assets/reset.css" />
   <link rel="stylesheet" href="./assets/style.css" />
 </head>
-
+<!-- Always gotta link your style sheets! -->
 <body>
   <header>
     <h1>Seth Vance</h1>
@@ -54,7 +54,7 @@ on the page -->
       </article>
     </section>
   </main>
-
+<!-- Here I applied the card and the snip img class to the images within the article tag -->
 
   <main>
     <section class="contact-info">
