--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ on the page -->
         <article>
         <img src="./assets/images/workplease.PNG" class="card big-img" alt="Project 1 Image" />
         <img src="./assets/images/web2.PNG" class="card snip-img" alt= "Project 2 Image" />
-        <img src="./assets/images/wireframe.PNG" class="card snip-img" alt= "Project 3 Image" />
+        <img src="./assets/images/frame.PNG" class="card snip-img" alt= "Project 3 Image" />
         <img src="./assets/images/image.PNG" class="card snip-img" alt= "Project 4 Image" />
         <img src="./assets/images/image3.PNG" class="card snip-img" alt= "Project 5 Image" />
         </div>
